--- a/Server/UI/src/views/Calendar/CalendarStyles.css
+++ b/Server/UI/src/views/Calendar/CalendarStyles.css
@@ -2,7 +2,7 @@
 
 /* calendar event */
 .calendar_default_event_inner {
-    background: #292c31;
+    background: #009DDC;
     color: #fff;
     border: none;
     font-size: 10pt;
